Review Apply
- final type Apply
- Annotation Code Style
- Change, Observable to Stream